--- a/Source/Wifinian/Wifinian.csproj
+++ b/Source/Wifinian/Wifinian.csproj
@@ -119,22 +119,22 @@
 		<Compile Include="Views\Converters\BooleanInverseConverter.cs" />
 		<Compile Include="Views\Converters\VisibilityInverseConverter.cs" />
 		<Compile Include="Views\ThemeService.cs" />
-		<Compile Include="Views\WindowEffect.cs" />
-		<Compile Include="Views\MainWindow.xaml.cs">
-			<DependentUpon>MainWindow.xaml</DependentUpon>
-			<SubType>Code</SubType>
-		</Compile>
-		<Compile Include="Views\MenuWindow.xaml.cs">
-			<DependentUpon>MenuWindow.xaml</DependentUpon>
-		</Compile>
+		<Compile Include="Views\WindowPainter.cs" />
 		<Page Include="Views\MainWindow.xaml">
 			<Generator>MSBuild:Compile</Generator>
 			<SubType>Designer</SubType>
 		</Page>
+		<Compile Include="Views\MainWindow.xaml.cs">
+			<DependentUpon>MainWindow.xaml</DependentUpon>
+			<SubType>Code</SubType>
+		</Compile>
 		<Page Include="Views\MenuWindow.xaml">
 			<SubType>Designer</SubType>
 			<Generator>MSBuild:Compile</Generator>
 		</Page>
+		<Compile Include="Views\MenuWindow.xaml.cs">
+			<DependentUpon>MenuWindow.xaml</DependentUpon>
+		</Compile>
 		<Page Include="Views\Styles\CommonControls.xaml">
 			<SubType>Designer</SubType>
 			<Generator>MSBuild:Compile</Generator>
@@ -162,58 +162,58 @@
 			<SubType>Designer</SubType>
 		</None>
 	</ItemGroup>
-  <ItemGroup>
-    <Content Include="Library\ScreenFrame.dll" />
-    <Content Include="Library\ScreenFrame.pdb" />
-    <Resource Include="Library\ScreenFrame.xml" />
-    <Content Include="Library\StartupAgency.dll" />
-    <Content Include="Library\StartupAgency.pdb" />
-    <Resource Include="Library\StartupAgency.xml" />
-    <None Include="Wifinian.VisualElementsManifest.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <Resource Include="Resources\Icons\AppIcon.ico" />
-    <Resource Include="Resources\Icons\TrayIcon.ico" />
-    <Resource Include="Resources\language_ja.txt" />
-    <Resource Include="Resources\language_en.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="ManagedNativeWifi">
-      <Version>2.1.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf">
-      <Version>1.1.31</Version>
-    </PackageReference>
-    <PackageReference Include="ReactiveProperty">
-      <Version>7.12.0</Version>
-    </PackageReference>
-    <PackageReference Include="System.Reactive.Core">
-      <Version>5.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="System.Reactive.Interfaces">
-      <Version>5.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="System.Reactive.Linq">
-      <Version>5.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="System.Reactive.PlatformServices">
-      <Version>5.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="System.Reactive.Windows.Threading">
-      <Version>5.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
-      <Version>5.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="System.ValueTuple">
-      <Version>4.5.0</Version>
-    </PackageReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+	<ItemGroup>
+		<Content Include="Library\ScreenFrame.dll" />
+		<Content Include="Library\ScreenFrame.pdb" />
+		<Resource Include="Library\ScreenFrame.xml" />
+		<Content Include="Library\StartupAgency.dll" />
+		<Content Include="Library\StartupAgency.pdb" />
+		<Resource Include="Library\StartupAgency.xml" />
+		<None Include="Wifinian.VisualElementsManifest.xml">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<Resource Include="Resources\Icons\AppIcon.ico" />
+		<Resource Include="Resources\Icons\TrayIcon.ico" />
+		<Resource Include="Resources\language_ja.txt" />
+		<Resource Include="Resources\language_en.txt" />
+	</ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Include="Properties\Resources.resx">
+			<Generator>PublicResXFileCodeGenerator</Generator>
+			<LastGenOutput>Resources.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="ManagedNativeWifi">
+			<Version>2.1.0</Version>
+		</PackageReference>
+		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf">
+			<Version>1.1.31</Version>
+		</PackageReference>
+		<PackageReference Include="ReactiveProperty">
+			<Version>7.12.0</Version>
+		</PackageReference>
+		<PackageReference Include="System.Reactive.Core">
+			<Version>5.0.0</Version>
+		</PackageReference>
+		<PackageReference Include="System.Reactive.Interfaces">
+			<Version>5.0.0</Version>
+		</PackageReference>
+		<PackageReference Include="System.Reactive.Linq">
+			<Version>5.0.0</Version>
+		</PackageReference>
+		<PackageReference Include="System.Reactive.PlatformServices">
+			<Version>5.0.0</Version>
+		</PackageReference>
+		<PackageReference Include="System.Reactive.Windows.Threading">
+			<Version>5.0.0</Version>
+		</PackageReference>
+		<PackageReference Include="System.Runtime.CompilerServices.Unsafe">
+			<Version>5.0.0</Version>
+		</PackageReference>
+		<PackageReference Include="System.ValueTuple">
+			<Version>4.5.0</Version>
+		</PackageReference>
+	</ItemGroup>
+	<Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
